@@ -1,0 +1,1 @@
+konsole-*.tar.xz
