@@ -1,0 +1,1 @@
+e2c4c2c0bd975c3ba4320abd82574763  konsole-4.10.5.tar.xz
