@@ -1,6 +1,7 @@
 
 kde-l10n-de-4.10.5-noarch-1_microlinux.txz: Added.
 kde-l10n-fr-4.10.5-noarch-1_microlinux.txz: Added.
+konsole-4.10.5-i486-1_microlinux.txz: Added.
 +--------------------------+
 Tue Aug 13 14:28:00 CEST 2013
 kdepimlibs-4.10.5-i486-1_microlinux.txz: Added.
